Styles: Home Page (Fixed Content Alignment)

--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ body{
     /* align-items: center; */
     color: white;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     padding: 2rem;
     margin-top: 1.2rem;
 }
